Coinbase base URL respected Trailing stop-loss fully actionable TradingService.updatePrice() : Sells entire base balance when currentPrice <= trailingStopPrice. Converts base to quote at live price and calls executeSell(quoteAmount) . Guards added: Reentrancy guard: stopLossInFlight avoids duplicate sells while one is executing. Minimum order check: skips if computed quote amount < 5 (GBP) to avoid dust orders.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Coinbase API Configuration
 COINBASE_API_KEY=
 COINBASE_API_SECRET=
+COINBASE_USE_PRODUCTION=False
 
 # Trading Configuration
 TRADING_PAIR=BTC-GBP
