Many changes, all working!

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,20 @@
 # Coinbase API Configuration
 COINBASE_API_KEY=
-COINBASE_API_SECRET=
-COINBASE_USE_PRODUCTION=False
+COINBASE_API_PRIVATE_KEY= # Path to your Coinbase API private key in PEM format
+COINBASE_USE_PRODUCTION=false
 
 # Trading Configuration
 TRADING_PAIR=BTC-GBP
 TRADE_AMOUNT_GBP=10
 TRADE_FEE_PERCENTAGE=0.5
+
+# Re-entry Strategy (SMA + trailing buy)
+# Number of days for SMA window
+REENTRY_MA_DAYS=20
+# Arm trailing buy when price is this percent below SMA
+REENTRY_BUY_BELOW_PCT=5
+# Execute buy when price bounces this percent from local low
+REENTRY_TRAILING_BUY_PCT=1
 
 # Trailing Stop Configuration
 TRAILING_STOP_PERCENT=2.0
